Fixing issue with jumping filters button on listing page fetch

--- a/content/themes/ea/src/scss/components/listing/_filter.scss
+++ b/content/themes/ea/src/scss/components/listing/_filter.scss
@@ -1,9 +1,8 @@
 .listing-filter__drawer-toggle {
   @include button_secondary;
   @include button_wider;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: $grid-gap * 2;
+
+  margin-left: $item-padding * 2;
 
   display: flex;
   align-items: center;
